# JLeague_Matches-Bar_Graph

./: .eslintrc.json  .gitignore  .markdownlint-cli2.jsonc  .pylintrc  CLAUDE.md  Make_MatchBarGraph.ipynb  README.md  Read_JMatches.ipynb  j1_points.html  j_points.css  j_points.js  j_points_header.html  j_points_js_footer.html  j_points_js_header.html  make_match_bar_graph.py  match_result-J1-20210528.csv  match_result-J3-20210524.csv  match_result-J3-20210527.csv  package-lock.json  package.json  pyproject.toml  pytest.ini  read_jleague_matches.py  requirements.txt  setup.cfg  tsconfig.json
.claude/: settings.json
config/: acle.yaml  aclgl.yaml  jfamatch.yaml  jleague.yaml  old_matches.yaml  openfootball.yaml  we_league.yaml
csv/: 1992.csv  1993.csv  1993_allmatch_result-J1.csv  1994.csv  1994A_allmatch_result-J1.csv  1994_allmatch_result-J1.csv  1995.csv  1995A_allmatch_result-J1.csv  1995_allmatch_result-J1.csv  1996.csv  1996_allmatch_result-J1.csv  1997.csv  1997B_allmatch_result-J1.csv  1997_allmatch_result-J1.csv  1998.csv  1998A_allmatch_result-J1.csv  1998_allmatch_result-J1.csv  1999.csv  1999A_allmatch_result-J1.csv  1999B_allmatch_result-J1.csv  1999_allmatch_result-J1.csv  1999_allmatch_result-J2.csv  2000.csv  2000B_allmatch_result-J1.csv  2000_allmatch_result-J1.csv  2000_allmatch_result-J2.csv  2001.csv  2001_allmatch_result-J1.csv  2001_allmatch_result-J2.csv  2002.csv  2002A_allmatch_result-J1.csv  2002B_allmatch_result-J1.csv  2002_allmatch_result-J1.csv  2002_allmatch_result-J2.csv  2003.csv  2003A_allmatch_result-J1.csv  2004.csv  (+112 more)
(+532 files in other folders)
