[project]
name = "jleague-matches-bar-graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    "pandas>=1.2.3",
    "pytz>=2025.2",
    "pyyaml>=5.4.1",
    "requests>=2.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# sys.path 調整後に import するスクリプトは E402 を許容
"scripts/*.py" = ["E402"]
"scripts/legacy/*.py" = ["E402"]
"src/read_we_league.py" = ["E402"]
